# pam-bellwether

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SESSION-PHASE.md  SPEC.md  Vagrantfile  lima-rocky9.yaml
bellwether/: Cargo.toml
bellwether/src/: lib.rs
bellwether/src/duo/: client.rs  mod.rs
common/: Cargo.toml
common/src/: config.rs  ffi.rs  flock.rs  lib.rs  log.rs  paths.rs  token.rs
demo/: act1.tape  act2.tape  concurrent.sh  demo.tape  setup.sh  ssh-attempt.sh  ssh-cached.sh  ssh-totp.sh
gate/: Cargo.toml
gate/src/: lib.rs
patches/: openssh-pam-info-messages.patch
stamp/: Cargo.toml
stamp/src/: lib.rs
tests/integration/: .env.example  mfa_stub.sh  pam_session_test.sh  pam_test.sh
